force-app/main/default/objects/Portfolio_Position__c/Portfolio_Position__c.object-meta.xml
<CustomObject>
    <label>Portfolio Position</label>
    <nameField>
        <label>Portfolio Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>