force-app/main/default/objects/Portfolio_Position__c/fields/Average_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost__c</fullName>
    <label>Average Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>