force-app/main/default/objects/Portfolio_Position__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <formula>Share__c  *  Stock__r.Current_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>