force-app/main/default/objects/Portfolio_Position__c/fields/Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss__c</fullName>
    <formula>Current_Value__c  -  Total_Cost_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>