force-app/main/default/objects/Portfolio_Position__c/fields/Gain_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss_Percent__c</fullName>
    <formula>IF(Total_Cost_Basis__c &gt; 0,
   ((Current_Value__c - Total_Cost_Basis__c) / Total_Cost_Basis__c) * 100,
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain Loss Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>