force-app/main/default/objects/Portfolio_Position__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>