force-app/main/default/objects/Portfolio_Position__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Position</relationshipLabel>
    <relationshipName>Position</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>