force-app/main/default/objects/Portfolio_Position__c/fields/Total_Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Basis__c</fullName>
    <formula>Share__c *  Average_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>